--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -26,7 +26,7 @@ jobs:
       - name: Run dry-run
         if: github.event_name != 'pull_request'
         env:
-          GITHUB_URL="github.com"
-          GITHUB_TOKEN="${{ secrets.GIT_TOKEN }}"
+          GITHUB_URL: "github.com"
+          GITHUB_TOKEN: "${{ secrets.GIT_TOKEN }}"
         run: |
           poetry run archiver --dry-run ./data
