--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -30,3 +30,10 @@ jobs:
           GIT_TOKEN: "${{ secrets.GIT_TOKEN }}"
         run: |
           poetry run archiver apply --dry-run ./data
+      - name: Run apply for real
+        if: github.ref == 'refs/heads/master'
+        env:
+          GIT_URL: "github.com"
+          GIT_TOKEN: "${{ secrets.GIT_TOKEN }}"
+        run: |
+          poetry run archiver apply ./data
