--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -29,7 +29,10 @@ jobs:
           GIT_URL: "github.com"
           GIT_TOKEN: "${{ secrets.GIT_TOKEN }}"
         run: |
-          poetry run archiver apply --dry-run ./data
+          poetry run archiver apply --dry-run ./data > output.txt
+      - name: Danger JS Action
+        if: github.event_name == 'pull_request'
+        uses: danger/danger-js@9.1.8
       - name: Run apply for real
         if: github.ref == 'refs/heads/main'
         env:
