--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -31,6 +31,8 @@ jobs:
         run: |
           poetry run archiver apply --dry-run ./data > output.txt
       - name: Danger JS Action
+        env:
+          DANGER_GITHUB_API_TOKEN: "${{ secrets.GIT_TOKEN }}"
         if: github.event_name == 'pull_request'
         uses: danger/danger-js@9.1.8
       - name: Run apply for real
