--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -29,12 +29,12 @@ jobs:
           GIT_URL: "github.com"
           GIT_TOKEN: "${{ secrets.GIT_TOKEN }}"
         run: |
-          poetry run archiver apply --dry-run ./data > output.txt
-      - name: Danger JS Action
-        env:
-          GITHUB_TOKEN: "${{ secrets.GIT_TOKEN }}"
-        if: github.event_name == 'pull_request'
-        uses: danger/danger-js@9.1.8
+          poetry run archiver apply --dry-run ./data
+#      - name: Danger JS Action
+#        env:
+#          GITHUB_TOKEN: "${{ secrets.GIT_TOKEN }}"
+#        if: github.event_name == 'pull_request'
+#        uses: danger/danger-js@9.1.8
       - name: Run apply for real
         if: github.ref == 'refs/heads/main'
         env:
